공통 모듈 분리

--- a/signin/index.html
+++ b/signin/index.html
@@ -360,7 +360,14 @@
   </header>
 
   <section class="login">
-
+    <h1>로그인</h1>
+    <div class="sighin__card">
+      <h2>Welcome! 스타벅스에 오신 것을 환영합니다.</h2>
+      <form>
+        <input type="text" placeholder="아이디를 입력하세요." />
+        <div class="password"></div>
+      </form>
+    </div>
   </section>
   <!--FOOTER-->
   <footer>
